--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "@types/react-router-dom": "^5.3.3",
+    "@types/styled-components": "^5.1.24",
     "axios": "^0.26.0",
     "giphy-api": "^2.0.2",
     "react": "^17.0.2",
@@ -23,6 +24,7 @@
     "react-spotify-web-playback": "^0.9.1",
     "redux-thunk": "^2.4.1",
     "spotify-web-api-node": "^5.0.2",
+    "styled-components": "^5.3.3",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
