--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.24",
     "axios": "^0.26.0",
+    "complementary-colors": "^1.0.6",
     "fast-average-color": "^7.1.0",
     "giphy-api": "^2.0.2",
     "react": "^17.0.2",
