--- a/package.json
+++ b/package.json
@@ -2,25 +2,25 @@
   "name": "animefy",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.ts",
   "scripts": {
-    "start": "npm start --prefix server",
-    "install-client": "cd client && npm install && npm run build && cd ..",
-    "install-server": "cd server && npm install && cd .. ",
-    "heroku-postbuild": "npm run install-client && npm run install-server"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/igornj/animefy.git"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/igornj/animefy/issues"
+  "dependencies": {
+    "body-parser": "^1.19.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.2",
+    "spotify-web-api-node": "^5.0.2"
   },
-  "homepage": "https://github.com/igornj/animefy#readme",
-  "engines": {
-    "node": ">=16.0.0"
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.17",
+    "nodemon": "^2.0.15"
   }
 }
