--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.17",
     "nodemon": "^2.0.15"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   }
 }
