--- a/package.json
+++ b/package.json
@@ -12,16 +12,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/jest": "^27.4.1",
     "body-parser": "^1.19.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
-    "spotify-web-api-node": "^5.0.2"
+    "jest": "^27.5.1",
+    "spotify-web-api-node": "^5.0.2",
+    "ts-jest": "^27.1.3",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
-    "@types/node": "^17.0.17",
+    "@types/node": "^17.0.22",
     "nodemon": "^2.0.15"
   },
   "engines": {
