--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,12 @@
 {
+    "files": [
+        "./server.ts"
+    ],
     "compilerOptions": {
         "target": "es6",
         "module": "commonjs",
         "rootDir": "./",
-        "outDir": "./build",
+        "outDir": "dist",
         "esModuleInterop": true,
         "strict": true
     }
