post install script and procifle

--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "server.ts",
   "scripts": {
-    "start": "tsc && cd dist && node server.js",
+    "start": "cd dist && node server.js",
     "dev": "nodemon server.ts",
+    "postinstall": "tsc",
     "heroku-postbuild": "npm install && cd client && npm install && npm run build"
   },
   "keywords": [],
