--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
+    "global": "^4.4.0",
     "jest": "^27.5.1",
     "spotify-web-api-node": "^5.0.2",
     "ts-jest": "^27.1.3",
     "ts-node": "^10.7.0",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.2",
+    "yarn": "^1.22.18"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
