--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@types/styled-components": "^5.1.24",
     "axios": "^0.26.0",
     "complementary-colors": "^1.0.6",
+    "country-emoji": "^1.5.6",
     "fast-average-color": "^7.1.0",
     "giphy-api": "^2.0.2",
     "react": "^17.0.2",
@@ -27,6 +28,7 @@
     "react-scripts": "5.0.0",
     "react-spotify-web-playback": "^0.9.1",
     "redux-thunk": "^2.4.1",
+    "screenfull": "^6.0.1",
     "spotify-web-api-node": "^5.0.2",
     "styled-components": "^5.3.3",
     "typescript": "^4.5.5",
